# Campus_Rag

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
data/raw/: 学院介绍.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: ChatComposer.vue  ChatHeader.vue  HistoryPanel.vue  (+3 more)
src/: app_bootstrap.py
src/agent/: __init__.py  __main__.py  cli.py  main_agent.py  result_parser.py
src/api_view/: dependencies.py  errors.py  sse.py  web_config.py  web_main.py
src/domain/: runtime_base.py
src/llm/: __init__.py  config.py  health.py  model.py  prompt_loader.py
src/memory/: __init__.py  compaction.py  config.py  message_builder.py  models.py  session.py  store.py
src/shared/: logging_setup.py
src/utils/: __init__.py  errors.py  paths.py  text.py  time.py
tests/: conftest.py
tests/test_agent/: test_main_agent.py  test_navigation_human_review_middleware.py  test_result_parser.py
tests/test_agent_modules/: test_router_and_runtime.py
tests/test_api/: test_app.py
tests/test_app/: test_app.py
tests/test_memory/: test_locks.py  test_session_manager.py
tests/test_memory_session/: test_locks.py  test_session_manager.py
tests/test_tools/: test_campus_navigation_tool.py
tests/test_workflows/: test_life_guide_workflow_service.py  test_list_route_catalog.py  test_manual_workflow_debug.py  test_retrieval_cache.py  test_router_and_runtime.py  test_routing_flexibility.py  test_runtime_isolation.py  test_workflow_tool.py
(+129 files in other folders)
